fixed scrollreveal flickering

--- a/CoreHome.HomePage/wwwroot/css/shared/_layout.css
+++ b/CoreHome.HomePage/wwwroot/css/shared/_layout.css
@@ -42,6 +42,10 @@ body {
     flex-direction: column;
 }
 
+.reveal {
+    visibility: hidden;
+}
+
 #content {
     padding-top: 50px;
     flex: 1;
